complete screen 375px

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="banner__img">
                 <div class="row">
-                    <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
+                    <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12 ">
                         <div class="banner__img__left">
                             <img src="./assets/images/img3.png" width="100%" alt="banner-left">
                             <div class="banner__img__left__content">
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 xol-md-12 col-sm-12 col-12">
+                    <div class="col-xl-4 col-lg-4 xol-md-12 col-sm-12 col-12 ">
                         <div class="banner__img__right">
                           <div class="d-flex  flex-wrap  right--img">
                               <div class="banner__img__right--top">
@@ -595,12 +595,12 @@
                 <div class="footer--bottom">
                     <div class="line4"></div>
                     <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                             <address>© Copyright 2015 & Made with <i class="fas fa-heart" style="color: red;"></i> by <a href=""
                                     style="color: white;"> ArrowHitech.</a></address>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
-                            <div class="footer--bottom__payment text-right">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                            <div class="footer--bottom__payment ">
                                <ul>
                                    <li><i class="fab fa-cc-visa"></i></li>
                                    <li><i class="fab fa-cc-paypal"></i></li>
@@ -617,7 +617,6 @@
     <!-------------- footer-end -------------->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous"></script>
-  
     <script src="./assets/js/blog_slick.js"></script>
     <script>
         $(function(){
