--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@
                         </div>
                         <div class="banner__img__right1">
                             <div class="row  right--img">
-                                <div class="banner__img__right--top col-md-6 col-sm-12 col-12">
+                                <div class="banner__img__right1--top col-md-6 col-sm-12 col-12">
                                     <img src="./assets/images/img5.jpg" alt="banner-right-top">
                                       <div class="banner__img__right--top__title">
                                           <h3 class="text-uppercase">small thing</h3>
                                           <h2 class="text-uppercase ">make different</h2>
                                       </div>
                                 </div>
-                                <div class="banner__img__right--bottom col-md-6 col-sm-12 col-12">
+                                <div class="banner__img__right1--bottom col-md-6 col-sm-12 col-12">
                                   <img src="./assets/images/img8.jpg" alt="banner-right-bottom">
-                                  <div class="banner__img__right--bottom__title">
+                                  <div class="banner__img__right1--bottom__title">
                                       <h3 class="text-uppercase">folio</h3>
                                       <h2 class="text-uppercase ">backpack</h2>
                                       <button class="btn-shop--bottom">Shop Now</button>
@@ -144,10 +144,12 @@
             <div class="product__list1">
                     <div class="row">
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
-                            <img class="card-img-top" src="./assets/images/img11.jpg" alt="watch" style="width:100%">
-                            <div class="card-img-overlay">
-                                <button class="text-uppercase add-to-cart">add to cart</button>
-                              </div>
+                            <div class="card-img-top">
+                                <img  src="./assets/images/img11.jpg" alt="watch" style="width:100%">
+                                <div class="card-img-overlay">
+                                    <button class="text-uppercase add-to-cart">add to cart</button>
+                                  </div>
+                            </div>
                             <div class="card-body product__content__detail">
                                 <h6 class="card-title"><a href="#">Suspendisse id volutpat</a></h6>
                                 <div class="product__content__detail__evaluate">
@@ -164,10 +166,12 @@
                               </div>
                         </div>
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
-                            <img class="card-img-top" src="./assets/images/img16.jpg" alt="watch" style="width:100%">
-                            <div class="card-img-overlay">
-                                <button class="text-uppercase add-to-cart">add to cart</button>
-                              </div>
+                            <div class="card-img-top">
+                                <img src="./assets/images/img16.jpg" alt="watch" style="width:100%">
+                                <div class="card-img-overlay">
+                                    <button class="text-uppercase add-to-cart">add to cart</button>
+                                  </div>
+                            </div>
                             <div class="card-body product__content__detail">
                                 <h6 class="card-title"><a href="#"> Lorem ipsum dolor</a></h6>
                                 <div class="product__content__detail__evaluate">
@@ -184,10 +188,12 @@
                               </div>
                         </div>
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
-                            <img class="card-img-top" src="./assets/images/img13.jpg" alt="watch" style="width:100%">
-                            <div class="card-img-overlay">
-                                <button class="text-uppercase add-to-cart">add to cart</button>
-                              </div>
+                            <div class="card-img-top">
+                                <img src="./assets/images/img13.jpg" alt="watch" style="width:100%">
+                                <div class="card-img-overlay">
+                                    <button class="text-uppercase add-to-cart">add to cart</button>
+                                  </div>
+                            </div>
                             <div class="card-body product__content__detail">
                                 <h6 class="card-title"><a href="#"> Proin sed nulla mi</a></h6>
                                 <div class="product__content__detail__evaluate">
@@ -202,10 +208,12 @@
                               </div>
                         </div>
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
-                            <img class="card-img-top" src="./assets/images/img19.jpg" alt="watch" style="width:100%">
-                            <div class="card-img-overlay">
-                                <button class="text-uppercase add-to-cart">add to cart</button>
-                              </div>
+                            <div class="card-img-top">
+                                <img  src="./assets/images/img19.jpg" alt="watch" style="width:100%">
+                                <div class="card-img-overlay">
+                                    <button class="text-uppercase add-to-cart">add to cart</button>
+                                  </div>
+                            </div>
                             <div class="card-body product__content__detail">
                                 <h6 class="card-title"> <a href="#">Aenean placerat</a></h6>
                                 <div class="product__content__detail__evaluate">
@@ -226,10 +234,12 @@
             <div class="product__list2">
                 <div class="row">
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
-                        <img class="card-img-top" src="./assets/images/img24.jpg" alt="watch" style="width:100%">
-                        <div class="card-img-overlay">
-                            <button class="text-uppercase add-to-cart">add to cart</button>
-                          </div>
+                        <div class="card-img-top">
+                            <img  src="./assets/images/img24.jpg" alt="watch" style="width:100%">
+                            <div class="card-img-overlay">
+                                <button class="text-uppercase add-to-cart">add to cart</button>
+                              </div>
+                        </div>
                         <div class="card-body product__content__detail">
                             <h6 class="card-title"><a href="#">Suspendisse id volutpat</a></h6>
                             <div class="product__content__detail__evaluate">
@@ -246,10 +256,12 @@
                           </div>
                     </div>
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
-                        <img class="card-img-top" src="./assets/images/img25.jpg" alt="watch" style="width:100%">
-                        <div class="card-img-overlay">
-                            <button class="text-uppercase add-to-cart">add to cart</button>
-                          </div>
+                        <div class="card-img-top">
+                            <img  src="./assets/images/img25.jpg" alt="watch" style="width:100%">
+                            <div class="card-img-overlay">
+                                <button class="text-uppercase add-to-cart">add to cart</button>
+                              </div>
+                        </div>
                         <div class="card-body product__content__detail">
                             <h6 class="card-title"><a href="#">Lorem ipsum dolor</a></h6>
                             <div class="product__content__detail__evaluate">
@@ -266,10 +278,12 @@
                           </div>
                     </div>
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
-                        <img class="card-img-top" src="./assets/images/img26.jpg" alt="watch" style="width:100%">
-                        <div class="card-img-overlay">
-                            <button class="text-uppercase add-to-cart">add to cart</button>
-                          </div>
+                        <div class="card-img-top">
+                            <img  src="./assets/images/img26.jpg" alt="watch" style="width:100%">
+                            <div class="card-img-overlay">
+                                <button class="text-uppercase add-to-cart">add to cart</button>
+                              </div>
+                        </div>
                         <div class="card-body product__content__detail">
                             <h6 class="card-title"><a href="#"> Proin sed nulla mi</a></h6>
                             <div class="product__content__detail__evaluate">
@@ -284,10 +298,12 @@
                           </div>
                     </div>
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
-                        <img class="card-img-top" src="./assets/images/img27.jpg" alt="watch" style="width:100%">
-                        <div class="card-img-overlay">
-                            <button class="text-uppercase add-to-cart">add to cart</button>
-                          </div>
+                        <div class="card-img-top">
+                            <img  src="./assets/images/img27.jpg" alt="watch" style="width:100%">
+                            <div class="card-img-overlay">
+                                <button class="text-uppercase add-to-cart">add to cart</button>
+                              </div>
+                        </div>
                         <div class="card-body product__content__detail">
                             <h6 class="card-title"><a href="#"> Aenean placerat</a></h6>
                             <div class="product__content__detail__evaluate">
@@ -560,7 +576,7 @@
                             <div class="line2"></div>
                             <div class="footer__navigation__content">
                                 <div class="row">
-                                    <div class="col-lg-5 col-md-6 col-sm-6 col-6">
+                                    <div class="col-lg-5 col-md-6 col-sm-6 col-6 footer__navigation__content--left">
                                         <ul class="list1">
                                             <li><a href="#"> Home</a></li>
                                             <li><a href="#">About Us</a></li>
