--- a/index.html
+++ b/index.html
@@ -146,9 +146,10 @@
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                             <div class="card-img-top">
                                 <img  src="./assets/images/img11.jpg" alt="watch" style="width:100%">
-                                <div class="card-img-overlay">
-                                    <button class="text-uppercase add-to-cart">add to cart</button>
-                                  </div>
+                                <div class="card-img-overlayy">
+                                    <button class=" text-uppercase add-to-cart">add to cart</button>
+                                </div>
+                                 
                             </div>
                             <div class="card-body product__content__detail">
                                 <h6 class="card-title"><a href="#">Suspendisse id volutpat</a></h6>
@@ -168,7 +169,7 @@
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                             <div class="card-img-top">
                                 <img src="./assets/images/img16.jpg" alt="watch" style="width:100%">
-                                <div class="card-img-overlay">
+                                <div class="card-img-overlayy">
                                     <button class="text-uppercase add-to-cart">add to cart</button>
                                   </div>
                             </div>
@@ -190,7 +191,7 @@
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                             <div class="card-img-top">
                                 <img src="./assets/images/img13.jpg" alt="watch" style="width:100%">
-                                <div class="card-img-overlay">
+                                <div class="card-img-overlayy">
                                     <button class="text-uppercase add-to-cart">add to cart</button>
                                   </div>
                             </div>
@@ -210,7 +211,7 @@
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                             <div class="card-img-top">
                                 <img  src="./assets/images/img19.jpg" alt="watch" style="width:100%">
-                                <div class="card-img-overlay">
+                                <div class="card-img-overlayy">
                                     <button class="text-uppercase add-to-cart">add to cart</button>
                                   </div>
                             </div>
@@ -236,7 +237,7 @@
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                         <div class="card-img-top">
                             <img  src="./assets/images/img24.jpg" alt="watch" style="width:100%">
-                            <div class="card-img-overlay">
+                            <div class="card-img-overlayy">
                                 <button class="text-uppercase add-to-cart">add to cart</button>
                               </div>
                         </div>
@@ -258,7 +259,7 @@
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                         <div class="card-img-top">
                             <img  src="./assets/images/img25.jpg" alt="watch" style="width:100%">
-                            <div class="card-img-overlay">
+                            <div class="card-img-overlayy">
                                 <button class="text-uppercase add-to-cart">add to cart</button>
                               </div>
                         </div>
@@ -280,7 +281,7 @@
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                         <div class="card-img-top">
                             <img  src="./assets/images/img26.jpg" alt="watch" style="width:100%">
-                            <div class="card-img-overlay">
+                            <div class="card-img-overlayy">
                                 <button class="text-uppercase add-to-cart">add to cart</button>
                               </div>
                         </div>
@@ -300,7 +301,7 @@
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                         <div class="card-img-top">
                             <img  src="./assets/images/img27.jpg" alt="watch" style="width:100%">
-                            <div class="card-img-overlay">
+                            <div class="card-img-overlayy">
                                 <button class="text-uppercase add-to-cart">add to cart</button>
                               </div>
                         </div>
