--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="row">
                     <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12 ">
                         <div class="banner__img__left">
-                            <img src="./assets/images/img3.png" width="100%" alt="banner-left">
+                            <img src="./assets/images/img3.png"  alt="banner-left">
                             <div class="banner__img__left__content">
                                <h2>Two High-end Materials</h2>
                              <a href="#" class="button btn-shop">Shop Now</a>
@@ -610,7 +610,7 @@
                                     <div class="col-lg-2 col-md-2 col-sm-2 col-2 address--icon">
                                         <ul>
                                             <li><a href="#"><i class="far fa-map"></i></a></li>
-                                            <li style="margin-top: 24px; font-size: 12px;"><a href="#"><i class="fas fa-phone-alt"></i></a></li>
+                                            <li class="phone"><a href="#"><i class="fas fa-phone-alt"></i></a></li>
                                             <li><a href="#"><i class="far fa-envelope"></i></a></li>
                                         </ul>
                                     </div>
