--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="row">
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                             <div class="card-img-top">
-                                <img  src="./assets/images/img11.jpg" alt="watch" style="width:100%">
+                                <img  src="./assets/images/img11.jpg" alt="watch" >
                                 <div class="card-img-overlayy">
                                     <button class=" text-uppercase add-to-cart">add to cart</button>
                                 </div>
@@ -168,7 +168,7 @@
                         </div>
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                             <div class="card-img-top">
-                                <img src="./assets/images/img16.jpg" alt="watch" style="width:100%">
+                                <img src="./assets/images/img16.jpg" alt="watch" >
                                 <div class="card-img-overlayy">
                                     <button class="text-uppercase add-to-cart">add to cart</button>
                                   </div>
@@ -190,7 +190,7 @@
                         </div>
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                             <div class="card-img-top">
-                                <img src="./assets/images/img13.jpg" alt="watch" style="width:100%">
+                                <img src="./assets/images/img13.jpg" alt="watch" >
                                 <div class="card-img-overlayy">
                                     <button class="text-uppercase add-to-cart">add to cart</button>
                                   </div>
@@ -210,7 +210,7 @@
                         </div>
                         <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                             <div class="card-img-top">
-                                <img  src="./assets/images/img19.jpg" alt="watch" style="width:100%">
+                                <img  src="./assets/images/img19.jpg" alt="watch" >
                                 <div class="card-img-overlayy">
                                     <button class="text-uppercase add-to-cart">add to cart</button>
                                   </div>
@@ -236,7 +236,7 @@
                 <div class="row">
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                         <div class="card-img-top">
-                            <img  src="./assets/images/img24.jpg" alt="watch" style="width:100%">
+                            <img  src="./assets/images/img24.jpg" alt="watch" >
                             <div class="card-img-overlayy">
                                 <button class="text-uppercase add-to-cart">add to cart</button>
                               </div>
@@ -258,7 +258,7 @@
                     </div>
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                         <div class="card-img-top">
-                            <img  src="./assets/images/img25.jpg" alt="watch" style="width:100%">
+                            <img  src="./assets/images/img25.jpg" alt="watch" >
                             <div class="card-img-overlayy">
                                 <button class="text-uppercase add-to-cart">add to cart</button>
                               </div>
@@ -280,7 +280,7 @@
                     </div>
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                         <div class="card-img-top">
-                            <img  src="./assets/images/img26.jpg" alt="watch" style="width:100%">
+                            <img  src="./assets/images/img26.jpg" alt="watch" >
                             <div class="card-img-overlayy">
                                 <button class="text-uppercase add-to-cart">add to cart</button>
                               </div>
@@ -300,7 +300,7 @@
                     </div>
                     <div class="card col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 procduct__content" >
                         <div class="card-img-top">
-                            <img  src="./assets/images/img27.jpg" alt="watch" style="width:100%">
+                            <img  src="./assets/images/img27.jpg" alt="watch" >
                             <div class="card-img-overlayy">
                                 <button class="text-uppercase add-to-cart">add to cart</button>
                               </div>
@@ -337,7 +337,7 @@
                <div class="row slider">
                    <div class="col-lg-12 col-md-12 col-sm-12">
                        <div class="card  justify-content-between  blog__content" >
-                        <img class="card-img-top" src="./assets/images/img32.jpg" alt="watch" style="width:100%">
+                        <img class="card-img-top" src="./assets/images/img32.jpg" alt="watch" >
                         <div class="card-img-overlay blog__content__date">
                             <div class="date--now text-center">
                                 <p>Jan</p>
@@ -360,7 +360,7 @@
                    </div>
                    <div class="col-lg-12 col-md-12 col-sm-12">
                        <div class="card  justify-content-between  blog__content"  >
-                        <img class="card-img-top" src="./assets/images/img34.jpg" alt="watch" style="width:100%">
+                        <img class="card-img-top" src="./assets/images/img34.jpg" alt="watch" >
                         <div class="card-img-overlay blog__content__date">
                             <div class="date--now text-center">
                                 <p>Jan</p>
@@ -383,7 +383,7 @@
                    </div>
                    <div class="col-lg-12 col-md-12 col-sm-12">
                        <div class="card  justify-content-between  blog__content" >
-                        <img class="card-img-top" src="./assets/images/img36.jpg" alt="watch" style="width:100%">
+                        <img class="card-img-top" src="./assets/images/img36.jpg" alt="watch" >
                         <div class="card-img-overlay blog__content__date">
                             <div class="date--now text-center">
                                 <p>Jan</p>
@@ -406,7 +406,7 @@
                    </div>
                    <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="card  justify-content-between  blog__content" >
-                     <img class="card-img-top" src="./assets/images/img32.jpg" alt="watch" style="width:100%">
+                     <img class="card-img-top" src="./assets/images/img32.jpg" alt="watch" >
                      <div class="card-img-overlay blog__content__date">
                          <div class="date--now text-center">
                              <p>Jan</p>
@@ -429,7 +429,7 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="card  justify-content-between  blog__content"  >
-                     <img class="card-img-top" src="./assets/images/img34.jpg" alt="watch" style="width:100%">
+                     <img class="card-img-top" src="./assets/images/img34.jpg" alt="watch" >
                      <div class="card-img-overlay blog__content__date">
                          <div class="date--now text-center">
                              <p>Jan</p>
@@ -452,7 +452,7 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="card  justify-content-between  blog__content" >
-                     <img class="card-img-top" src="./assets/images/img36.jpg" alt="watch" style="width:100%">
+                     <img class="card-img-top" src="./assets/images/img36.jpg" alt="watch" >
                      <div class="card-img-overlay blog__content__date">
                          <div class="date--now text-center">
                              <p>Jan</p>
@@ -475,7 +475,7 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="card  justify-content-between  blog__content" >
-                     <img class="card-img-top" src="./assets/images/img32.jpg" alt="watch" style="width:100%">
+                     <img class="card-img-top" src="./assets/images/img32.jpg" alt="watch" >
                      <div class="card-img-overlay blog__content__date">
                          <div class="date--now text-center">
                              <p>Jan</p>
@@ -498,7 +498,7 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="card  justify-content-between  blog__content"  >
-                     <img class="card-img-top" src="./assets/images/img34.jpg" alt="watch" style="width:100%">
+                     <img class="card-img-top" src="./assets/images/img34.jpg" alt="watch" >
                      <div class="card-img-overlay blog__content__date">
                          <div class="date--now text-center">
                              <p>Jan</p>
@@ -521,7 +521,7 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="card  justify-content-between  blog__content" >
-                     <img class="card-img-top" src="./assets/images/img36.jpg" alt="watch" style="width:100%">
+                     <img class="card-img-top" src="./assets/images/img36.jpg" alt="watch" >
                      <div class="card-img-overlay blog__content__date">
                          <div class="date--now text-center">
                              <p>Jan</p>
@@ -631,8 +631,7 @@
                     <div class="line4"></div>
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-                            <address>© Copyright 2015 & Made with <i class="fas fa-heart" style="color: red;"></i> by <a href=""
-                                    style="color: white;"> ArrowHitech.</a></address>
+                            <address>© Copyright 2015 & Made with <i class="fas fa-heart heart"></i> by <a href=""> ArrowHitech.</a></address>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                             <div class="footer--bottom__payment ">
